WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165594
REGRESSION: font shorthand parsing is broken
https://bugs.webkit.org/show_bug.cgi?id=165594
Summary
REGRESSION: font shorthand parsing is broken
Dave Hyatt
Reported
2016-12-07 22:15:33 PST
REGRESSION: font shorthand parsing is broken
Attachments
Patch
(8.95 KB, patch)
2016-12-07 22:20 PST
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-07 22:20:07 PST
Created
attachment 296490
[details]
Patch
Dave Hyatt
Comment 2
2016-12-07 22:30:31 PST
Fixed in
r209526
.
Alex Christensen
Comment 3
2016-12-08 00:24:04 PST
Fixed nullptr/false issue in
http://trac.webkit.org/changeset/209531
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug